Ужесточает строковый контракт форматирования в ядре анализаторов и экспорта.